[package]
name = "claude-meter"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "claude-meter"
path = "src/main.rs"

[lib]
name = "claude_meter"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
axum = "0.8"
chrono = { version = "0.4", features = ["clock"] }
clap = { version = "4", features = ["derive"] }
comfy-table = "7"
opentelemetry-proto = { version = "0.27", features = ["gen-tonic", "metrics"] }
prost = "0.13"
rusqlite = { version = "0.32", features = ["bundled"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
